# auto-analyser-2

./: .dockerignore  .env.docker  .env.example  .gitignore  ALTERNATIVE_DATA_SOURCES.md  API.md  CLAUDE.md  Cargo.toml  DEEP_ANALYSIS_FEATURES.md  DESIGN_SYSTEM.md  DOCKER.md  DOCKER_COMPLETE.md  DOCKER_IMPLEMENTATION.md  DOCKER_QUICK_REF.md  Dockerfile  FIX_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NOTIFICATIONS.md  QUICKSTART.md  README.md  RSI_FIX_DETAILED.md  SETUP.md  STARTUP_DATA_LOADING.md  STRUCTURE.md  TEST_RESULTS.md  VPN_DOCKER_FIX.md  YAHOO_FINANCE_FIX.md  YAHOO_FINANCE_FIX_VERIFIED.md  YAHOO_RATE_LIMIT_FIX.md  docker-compose.prod.yml  docker-compose.yml  docker-test.sh  test_api.sh  test_yahoo_api.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
examples/: test_nasdaq_api.rs  verify_rsi.rs
frontend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.ts  hooks.ts  index.css  index.tsx  types.ts
frontend/src/components/: FilterPanel.tsx  MarkdownContent.tsx  Navigation.tsx  ProgressBar.tsx  SettingsPanel.tsx  StockCard.tsx  StockDetailModal.tsx
frontend/src/components/alerts/: ConditionBuilder.tsx  WatchButton.tsx
frontend/src/components/ui/: color-mode.tsx  provider.tsx  toggle-tip.tsx
frontend/src/components/ui/primitives/: EmptyState.tsx  Num.tsx  PageHeader.tsx  SignalBadge.tsx  StatBlock.tsx  Surface.tsx  index.ts
frontend/src/contexts/: SettingsContext.tsx
frontend/src/pages/: AlertsPage.tsx  Dashboard.tsx  FundsPage.tsx  NewsPage.tsx  OpportunitiesPage.tsx  ScreenerPage.tsx  SectorPage.tsx  StockDetailPage.tsx  StocksPage.tsx
frontend/src/theme/: design-tokens.ts  system.ts
src/: CLAUDE.md  analysis.rs  api.rs  api_tests.rs  async_fetcher.rs  cache.rs  config.rs  db.rs  indexes.rs  indicators.rs  indicators_tests.rs  lib.rs  main.rs  models.rs  models_tests.rs  nasdaq.rs  openrouter.rs  symbols.rs  yahoo.rs
src/notifications/: CLAUDE.md  api.rs  dispatcher.rs  evaluator.rs  mod.rs  models.rs  repo.rs  rules.rs
src/notifications/channels/: discord.rs  mod.rs
