[package]
name = "auto_analyser_2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
mongodb = "3.1"
bson = { version = "2.13", features = ["chrono-0_4"] }

# HTTP client for stock data
reqwest = { version = "0.12", features = ["json"] }
yahoo_finance_api = "1.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Technical analysis
ta = "0.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# Utilities
futures = "0.3"
once_cell = "1.19"
